<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home_camera" />
        <item
            android:id="@+id/nav_near_trash"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_near_trash" />
        <item
            android:id="@+id/nav_eco_points"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_eco_points" />
        <item
            android:id="@+id/nav_register_bin"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_register_bin" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_github"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_github" />
            <item
                android:id="@+id/nav_our_team"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_our_team" />
        </menu>
    </item>

</menu>
