<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home_camera">

    <fragment
        android:id="@+id/nav_home_camera"
        android:name="net.ltm.air.ui.home.HomeFragment"
        android:label="@string/menu_home_camera"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_near_trash"
        android:name="net.ltm.air.ui.gallery.GalleryFragment"
        android:label="@string/menu_near_trash"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_eco_points"
        android:name="net.ltm.air.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_eco_points"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_register_bin"
        android:name="net.ltm.air.ui.tools.ToolsFragment"
        android:label="@string/menu_register_bin"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_github"
        android:name="net.ltm.air.ui.share.ShareFragment"
        android:label="@string/menu_github"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_our_team"
        android:name="net.ltm.air.ui.send.SendFragment"
        android:label="@string/menu_our_team"
        tools:layout="@layout/fragment_share" />
</navigation>